Add complete ATtiny13A support with PWM, GPIO, and watchdog
- Add Tiny13A HAL w/ Timer0 PWM (PB0/PB1), GPIO, and watchdog support
- Add delay functions with clock speed documentation for 1.2MHz default
- Add examples: blink, breathing LED (linear/smooth), dual PWM, watchdog
- Include basic documentation covering ATtiny13A limitations and capabilities

Change-Id: I004fdd38e236a72693073f56906da614d3da650f

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ members = [
     "examples/sparkfun-promini-5v",
     "examples/trinket-pro",
     "examples/trinket",
+    "examples/attiny13a",
 ]
 exclude = [
     # The RAVEDUDE! Yeah!
