--- a/mcu/attiny-hal/Cargo.toml
+++ b/mcu/attiny-hal/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["no-std", "embedded", "hardware-support"]
 [features]
 rt = ["avr-device/rt"]
 device-selected = []
+attiny13a = ["avr-device/attiny13a", "device-selected"]
 attiny84 = ["avr-device/attiny84", "device-selected"]
 attiny85 = ["avr-device/attiny85", "device-selected"]
 attiny88 = ["avr-device/attiny88", "device-selected"]
