atmega-hal: Add support for atmega169pa

--- a/mcu/atmega-hal/Cargo.toml
+++ b/mcu/atmega-hal/Cargo.toml
@@ -18,6 +18,7 @@ atmega48p = ["avr-device/atmega48p", "device-selected"]
 atmega16 = ["avr-device/atmega16", "device-selected"]
 atmega164pa = ["avr-device/atmega164pa", "device-selected"]
 atmega168 = ["avr-device/atmega168", "device-selected"]
+atmega169pa = ["avr-device/atmega169pa", "device-selected"]
 atmega328p = ["avr-device/atmega328p", "device-selected"]
 atmega328pb = ["avr-device/atmega328pb", "device-selected"]
 atmega32a = ["avr-device/atmega32a", "device-selected"]
