--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "examples/arduino-nano",
     "examples/arduino-uno",
     "examples/atmega2560",
+    "examples/avr-butterfly",
     "examples/nano168",
     "examples/sparkfun-promicro",
     "examples/sparkfun-promini-3v3",
