ravedude: Enable overflow-checks in release and use panic=abort
Tweak the release profile to keep overflow-checks enabled. The
performance hit is minimal and this ensures no bugs slip through.

Additionally switch to panic=abort as we have no use for unwinding.

--- a/ravedude/Cargo.toml
+++ b/ravedude/Cargo.toml
@@ -24,3 +24,10 @@ clap = { version = "4.0.0", features = ["derive", "env"] }
 
 [target.'cfg(windows)'.dependencies]
 terminal-link = "0.1.0"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+overflow-checks = true
+panic = "abort"
